infrastructure/kubernates/auth-mongo-depl.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: auth-mongo-depl
  labels:
    app: auth-mongo
spec:
  replicas: 1
  serviceName: 'auth-mongo'
  selector:
    matchLabels:
      role: mongo
      app: auth-mongo
  template:
    metadata:
      labels:
        role: mongo
        app: auth-mongo
    spec:
      volumes:
        - name: auth-pv-storage
          persistentVolumeClaim:
            claimName: auth-pv-claim
      containers:
        - name: auth-mongo
          image: mongo
          volumeMounts:
            - mountPath: "/data/db"
              name: auth-pv-storage
          # resources: 
          #   requests:
          #     cpu: "50m"
          #     memory: "128Mi"              
          #   limits:
          #     cpu: "100m"
          #     memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: auth-mongo-srv
spec:
  selector:
    app: auth-mongo
  ports:
    - name: db
      protocol: TCP
      port: 27017
      targetPort: 27017
