infrastructure/kubernates/customers-mongo-depl.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: customers-mongo-depl
  labels:
    app: customers-mongo
spec:
  replicas: 1
  serviceName: 'customers-mongo'
  selector:
    matchLabels:
      role: mongo
      app: customers-mongo
  template:
    metadata:
      labels:
        role: mongo
        app: customers-mongo
    spec:
      volumes:
        - name: customers-pv-storage
          persistentVolumeClaim:
            claimName: customers-pv-claim
      containers:
        - name: customers-mongo
          image: mongo
          volumeMounts:
            - mountPath: "/data/db"
              name: customers-pv-storage
          resources: 
            requests:
              cpu: "50m"
              memory: "128Mi"              
            limits:
              cpu: "100m"
              memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: customers-mongo-srv
spec:
  selector:
    app: customers-mongo
  ports:
    - name: db
      protocol: TCP
      port: 27017
      targetPort: 27017
