infrastructure/kubernates/tickets-mongo-depl.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: tickets-mongo-depl
  labels:
    app: tickets-mongo
spec:
  replicas: 1
  serviceName: 'tickets-mongo'
  selector:
    matchLabels:
      app: tickets-mongo
  template:
    metadata:
      labels:
        app: tickets-mongo
    spec:
      containers:
        - name: tickets-mongo
          image: mongo
---
apiVersion: v1
kind: Service
metadata:
  name: tickets-mongo-srv
spec:
  selector:
    app: tickets-mongo
  ports:
    - name: db
      protocol: TCP
      port: 27017
      targetPort: 27017
